Added landing page. Added Balanza background

--- a/main/templates/poll.html
+++ b/main/templates/poll.html
@@ -29,7 +29,7 @@
 
 {% block contents %}
 
-<div class="hero-unit">
+<div class="hero-unit hero-transparent">
 
     <h1>{% trans "¡Gracias por estar aquí!" %}</h1>
 
