--- a/main/static/css/changes.css
+++ b/main/static/css/changes.css
@@ -4,6 +4,9 @@ textarea { height: 100px;}
 body {
   padding-top: 60px;
   padding-bottom: 40px;
+  background-image: url('../images/balanza.png');
+  background-repeat:no-repeat;
+  background-position:80% 80px;
 }
 .brand {
     color: #ECAA3E !important;
@@ -18,4 +21,8 @@ margin-right: 5px;
 
 .spaced {
     line-height:170%;
+}
+
+.hero-transparent {
+    background-color: transparent;
 }
